# PerovskiteML

./: .gitignore  Project.toml  README.md  experiment.py  perovskite_utils.py  pyproject.toml  pyrequirements.txt
configs/experiments/: bandgap_prediction.toml  example.toml
configs/parameter_searches/: bandgap-sweep.toml  optuna-sweep.toml
data/: .gitignore  pdp_units_data.xlsx  section_keys.json
data/clean/: nan_equivalents.json  pdp_units_data.xlsx  section_keys.json
data/raw/: pdp_description_5.4.txt
docs/: .gitignore  conf.py  index.rst  perovskiteml.rst
experiments/: bandgap-sweep.py  bandgap_prediction.py  example_experiment.py  optuna-sweep.py
experiments/bandgap-prediction/: catboost.toml  run.py  xgboost.toml
experiments/bandgap-sweep/: bandgap-sweep.py  catboost.toml  run.py  xgboost.toml
experiments/example-prediction/: example.toml
experiments/example-sweep/: optuna-sweep.toml  run.py
julia/: PVSKPlotting.jl  parse_description.jl
models/: kneighbor-classifier.py  shap-test.py  xgboost-reg-v1.0.py  xgboost_09-08-24.py
notebooks/: .gitignore  DataCleanse.jl  DataSearch.jl  bandgap-preprocess-normalize.ipynb  bandgap-preprocess.ipynb  element-visualization.ipynb  gridsearch-test.ipynb  neptune-shap-analysis.ipynb  preprocess_grid.ipynb  range_data_fix.ipynb  xgboost-reg-v2.0.ipynb  xgboost-reg-v3.0.ipynb
perovskiteml/: fileutils.py
src/: PVSKPlotting.jl  data_expansion.py  data_reduction.py  parse_description.jl  poisson.jl
src/data_utils/: __init__.py  data_reduction.py
src/models/: kneighbor-classifier.py  scripts.py  (+4 more)
(+55 files in other folders)
