[project]
name = "perovskiteml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Violet Hart", email = "vihart.rl@gmail.com" }
]
requires-python = "==3.12.0"
dependencies = [
    "bigtree>=0.24.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "neptune[optuna,xgboost]>=1.13.0",
    "openpyxl>=3.1.5",
    "optuna>=4.2.0",
    "optuna-integration>=4.2.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "xgboost>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "esbonio>=0.16.5",
    "myst-nb>=1.2.0",
    "perovskiteml",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.sources]
perovskiteml = { workspace = true }
